added sorting buttons (for fun)

--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,11 @@
 	</head>
 	<body class="light-theme">
 		<div class="toolbar">
+			<div class="btns">
+				<button id="sortAsc" class="sortbtn">Price ascending</button>
+				<button id="sortDesc" class="sortbtn">Price descending</button>
+			</div>
+
 			<!-- Разметка переключателя темы -->
 			<div class="theme-switch">
 				<svg class="theme-switch__icon" role="img" aria-label="Иконка солнца">
