added notification logic

--- a/src/index.html
+++ b/src/index.html
@@ -49,6 +49,9 @@
 
 		<!-- В этот список рендери разметку меню -->
 		<ul class="menu js-menu"></ul>
+		<div class="notification-container visibility-hidden">
+			<h2 class="notification-text">Test text</h2>
+		</div>
 		<script src="./index.js"></script>
 	</body>
 </html>
